[package]
name = "tokio-modbus"
description = "Tokio-based Modbus library"
version = "0.4.0-tokio-0.3"
authors = ["slowtec GmbH", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["fieldbus", "modbus", "hardware", "automation"]
homepage = "https://github.com/slowtec/tokio-modbus"
repository = "https://github.com/slowtec/tokio-modbus"
edition = "2018"

[dependencies]
bytes = "1.0"
byteorder = "1"
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false }
log = "0.4"
net2 = { version = "0.2", optional = true, default-features = false }
smallvec = { version = "1", default-features = false }
# rt-core should be enabled only with "server" feature. Waiting for https://github.com/rust-lang/cargo/issues/5954
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
env_logger = "0.7"
futures = "0.3"
tokio = { version = "1.0", features = ["net", "macros", "io-util"] }

[features]
default = ["tcp", "sync"]
tcp = ["tokio/net", "futures-util/sink"]
sync = []
server = ["net2", "futures"]
tcp-server-unstable = ["server"]

[badges]
travis-ci = { repository = "slowtec/tokio-modbus" }
coveralls = { repository = "slowtec/tokio-modbus", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }
